# Go1ObjectTracking

./: CMakeLists.txt  README.md  stereo_camera_config.yaml  trans_rect_config.yaml
src/: CMakeLists.txt
src/NanoHead/: example_getCalibParamsFile.cc  getCalibParamsFile.cc  sendGStreamer.cc  send_jpeg_framesZeroMQ.cc  send_perception.cc  send_raw_framesZeroMQ.cc
src/Raspberry/: motion.py
src/XavierNX/: benchmark_yolo_trt.py  camCalibParams.yaml  getJpegZeroMQ.py  get_perception.py  getrawZeroMQ.py  main.py
src/XavierNX/convert_model_to_engine/: 1.convert_pt_to_onnx.py  2.fix_onnx_int64_to_int32.py  3.convert_onnx_to_engine.py
src/XavierNX/models/: yolov8trt_wrapper.py
